[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/GameMenu/LevelsButton.gd" type="Script" id=1]
[ext_resource path="res://materials/btns.tres" type="TileSet" id=2]

[node name="LevelsButton" type="TextureButton"]
margin_right = 32.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="Texture" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 21, 0, 1, 23, 0, 65536, 29, 0, 65537, 31, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 32.0
margin_bottom = 32.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 32.0
margin_bottom = 16.0
custom_constants/separation = 1
alignment = 1

[node name="Letter1" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 15.0
margin_right = 15.0

[node name="Letter2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 16.0

[connection signal="button_down" from="." to="." method="_on_LevelsButton_button_down"]
